Phillip: Fixed look on mobile (yet again)

--- a/src/pages/Apply/Apply.css
+++ b/src/pages/Apply/Apply.css
@@ -246,7 +246,7 @@
         background-color: #d97a77;
         border-radius: 12px;
         border: none;
-        width: 81.5vw;
+        width: 80.5vw;
         height: 3vw, auto;
         padding: 10px;
         color: white;
@@ -259,7 +259,7 @@
         background-color: var(--forestgreen);
         border-radius: 12px;
         border: none;
-        width: 20vw;
+        width: 40vw;
         padding: 10px;
         color: white;
         margin-right: 0.5vw;
